# quick_prototypes

./: CMakeLists.txt  README.md  start.sh
lib/: CMakeLists.txt
lib/impl/: ImageAtlas.cpp
lib/public/: Image.h  ImageAtlas.h  Rectangle.h
lib/public/core/: vec2.h
lib/public/util/: Utils.h
test/: CMakeLists.txt  main_test.cpp  test_rectangle.cpp
